# learning-opengl

./: CMakeLists.txt  LICENSE  README.md
depedencies/glad/: glad.h
src/: main.cpp
src/main/: config.h  glad.c  main.cpp
src/main/shader/: fragment.glsl  vertex.glsl
src/shader/: fragment.glsl  vertex.glsl
